--- a/libs/blender-ui/src/lib/components/outliner/outliner.component.html
+++ b/libs/blender-ui/src/lib/components/outliner/outliner.component.html
@@ -2,25 +2,25 @@
   <!-- Header -->
   <div class="outliner-header">
     <button class="header-btn" title="Display Mode">
-      <span class="material-icons-outlined text-sm">view_list</span>
-      <span class="material-icons-outlined text-xs arrow">expand_more</span>
+      <span class="material-symbols-outlined text-sm">view_list</span>
+      <span class="material-symbols-outlined text-xs arrow">expand_more</span>
     </button>
     <button class="header-btn" title="View Layer">
-      <span class="material-icons-outlined text-sm">image</span>
-      <span class="material-icons-outlined text-xs arrow">expand_more</span>
+      <span class="material-symbols-outlined text-sm">image</span>
+      <span class="material-symbols-outlined text-xs arrow">expand_more</span>
     </button>
 
     <div class="search-box">
-      <span class="material-icons-outlined search-icon">search</span>
+      <span class="material-symbols-outlined search-icon">search</span>
       <input type="text" placeholder="Search" class="search-input">
     </div>
 
     <button class="header-btn" title="Filter">
-      <span class="material-icons-outlined text-sm">filter_alt</span>
-      <span class="material-icons-outlined text-xs arrow">expand_more</span>
+      <span class="material-symbols-outlined text-sm">filter_alt</span>
+      <span class="material-symbols-outlined text-xs arrow">expand_more</span>
     </button>
     <button class="header-btn" title="New Collection">
-      <span class="material-icons-outlined text-sm">create_new_folder</span>
+      <span class="material-symbols-outlined text-sm">create_new_folder</span>
     </button>
   </div>
 
@@ -39,21 +39,16 @@
              tabindex="0">
 
           <button cdkTreeNodeToggle class="toggle-btn invisible" [attr.aria-label]="'Toggle ' + node.name">
-              <span class="material-icons-outlined">arrow_right</span>
+              <span class="material-symbols-outlined">arrow_right</span>
           </button>
 
-          <span class="material-icons node-type-icon"
-                [ngClass]="node.type"
-                [class.orange-icon]="node.type === 'camera' || node.type === 'mesh' || node.type === 'light'"
-          >
-            {{ node.icon }}
-          </span>
+          <span class="material-symbols-outlined node-type-icon" [ngClass]="node.type">{{ node.icon }}</span>
 
           <span class="node-name truncate">{{ node.name }}</span>
 
           <div class="node-controls">
-            <span class="material-icons-outlined control-icon">visibility</span>
-            <span class="material-icons-outlined control-icon">camera_alt</span>
+            <span class="material-symbols-outlined control-icon">visibility</span>
+            <span class="material-symbols-outlined control-icon">camera_alt</span>
           </div>
         </div>
       </cdk-nested-tree-node>
@@ -69,21 +64,19 @@
              tabindex="0">
 
           <button cdkTreeNodeToggle class="toggle-btn" [attr.aria-label]="'Toggle ' + node.name">
-            <span class="material-icons-outlined">
+            <span class="material-symbols-outlined">
               {{ treeControl.isExpanded(node) ? 'arrow_drop_down' : 'arrow_right' }}
             </span>
           </button>
 
-          <span class="material-icons node-type-icon" [ngClass]="node.type">
-            {{ node.icon }}
-          </span>
+          <span class="material-symbols-outlined node-type-icon" [ngClass]="node.type">{{ node.icon }}</span>
 
           <span class="node-name truncate">{{ node.name }}</span>
 
           <div class="node-controls">
-            <span class="material-icons-outlined control-icon">check_box</span>
-            <span class="material-icons-outlined control-icon">visibility</span>
-            <span class="material-icons-outlined control-icon">camera_alt</span>
+            <span class="material-symbols-outlined control-icon">check_box</span>
+            <span class="material-symbols-outlined control-icon">visibility</span>
+            <span class="material-symbols-outlined control-icon">camera_alt</span>
           </div>
         </div>
 
